[gd_scene load_steps=5 format=3 uid="uid://bc5mhvn4e7113"]

[ext_resource type="Script" path="res://scripts/boss_orc.gd" id="1_puctb"]
[ext_resource type="ArrayMesh" uid="uid://meo1dpp0pkn4" path="res://assets/MAINORC.obj" id="2_0h0jf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_neth3"]
size = Vector3(2.25916, 3.31642, 1.4558)

[sub_resource type="SphereShape3D" id="SphereShape3D_stqfw"]
radius = 0.604747

[node name="BossOrc" type="StaticBody3D" groups=["Orc Troop"]]
script = ExtResource("1_puctb")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.07, 0, 0, 0, 0.07, 0, 0, 0, 0.07, -0.00299644, 0.0858327, -0.00413269)
mesh = ExtResource("2_0h0jf")

[node name="Aim" type="Marker3D" parent="MeshInstance3D2"]
transform = Transform3D(5.55556, 0, 0, 0, 5.55556, 0, 0, 0, 5.55556, -5.50897, 27.6126, -5.09252)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0259688, 1.51299, -0.0195054)
shape = SubResource("BoxShape3D_neth3")

[node name="DetectionRange" type="Area3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Range" type="CollisionShape3D" parent="DetectionRange"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("SphereShape3D_stqfw")

[node name="BulletContainer" type="Node" parent="."]

[node name="FireRate" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
